--- a/index.html
+++ b/index.html
@@ -8,6 +8,50 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
+    <header>
+      <nav id="navbar">
+        <a href="#welcome-section" class="nav-link">About Me</a>
+        <a href="#projects" class="nav-link">Work</a>
+        <a href="#contacts" class="nav-link">Contact</a>
+      </nav>
+    </header>
+    <main>
+      <section id="welcome-section" class="main-section">
+        <h1>Hey I am Richard</h1>
+      </section>
+      <section id="projects" class="main-section">
+        <div id="projects-content">
+          <a
+            href="https://codepen.io/FreeCodeCamp/pen/NNvBQW"
+            class="project-tile"
+            ><img
+              src="https://cloud.githubusercontent.com/assets/15967809/17642794/d084d718-6171-11e6-83fa-ede5d0a67ad2.png"
+              alt="tribute page preview"
+            />
+            Tribute page</a
+          >
+          <a
+            href="https://codepen.io/FreeCodeCamp/pen/ONjoLe"
+            class="project-tile"
+            ><img
+              src="https://cloud.githubusercontent.com/assets/15967809/17642771/7cd6a0c4-6171-11e6-87fb-915f6084d104.png"
+              alt="random quote machine preview"
+            />Random quote machine</a
+          >
+        </div>
+      </section>
+      <section id="social" class="main-section">
+        <div id="github">
+          <a
+            href="https://github.com/richarddanquah"
+            target="_blank"
+            id="profile-link"
+            >GitHub</a
+          >
+        </div>
+      </section>
+    </main>
+
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
   </body>
 </html>
